--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="css.css" rel="stylesheet">
-  </head> 
+  </head>
   <body>
   <div class="container">
-    <h1>Qualche grafico</h1>
-    <h4>18/06/2022 - Tiziana Mancinelli</h4>
+    <h1>Some graphs</h1>
+    <h4>of a weekend of data visualisation with js - ICDP [Digital Library]</h4>
     <hr/>
 
     <div class="container">
